<resources>
    <string name="app_name">Buyer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="crash_message">Что-то пошло не так! Пожалуйста, отправьте отчёт об ошибке разработчику!</string>

    <string name="title_add_item_activity">Добавление продукта</string>


    <string name="lists_title">Списки</string>
    <string name="lists_edit_title">Редактирование списков</string>
    <string name="lists_item_info">Информация о продукте</string>

    <string name="cat_other">Другое</string>

    <string name="dialog_add_list_title">Добавление списка</string>
    <string name="dialog_add_list_hint">Название списка</string>
    <string name="dialog_add_list_error">Данный список уже существует</string>

    <string name="button_add">Добавить</string>
    <string name="button_delete">Удалить</string>
    <string name="button_copy">Скопировать</string>
    <string name="button_share">Поделиться</string>
    <string name="button_done">Выполнить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_edit">Редактировать</string>

    <string name="menu_sort">Сортировка</string>

    <string name="order_alphabet">По алфавиту</string>
    <string name="order_popularity">По популярности</string>
    <string name="order_size">По размеру</string>
    <string name="order_category">По категории</string>
    <string name="order_create">По дате создания</string>
    <string name="order_modify">По дате изменения</string>
    <string name="order_price">По суммарной цене</string>
    <string name="order_by_hand">Ручная сортировка</string>

    <string name="order_ascending">По возрастанию</string>
    <string name="order_descending">По убыванию</string>

    <string name="order_item_alphabet">По алфавиту</string>
    <string name="order_item_popularity">По популярности</string>
    <string name="order_item_size">По количеству</string>
    <!--    <string name="order_list_category">По категории</string>-->
    <string name="order_item_create">По дате добавления</string>
    <string name="order_item_modify">По дате изменения</string>
    <string name="order_item_price">По цене</string>
    <string name="empty_data">Нет данных</string>
    <string name="empty_getting_data">Нечего отображать</string>

    <string name="default_first_list_name">Продукты</string>

    <string name="measure_piece">шт.</string>
    <string name="measure_kilogram">кг.</string>
    <string name="measure_gram">г.</string>
    <string name="measure_liter">л.</string>

    <string name="list_item_created">Создание: %s</string>
    <string name="list_item_modified">Изменение: %s</string>
    <string name="list_item_buyed">Завершение: %s</string>
    <string name="button_import">Импортировать</string>
    <string name="button_move">Переместить</string>
</resources>
